# yealink-manager

./: README.md  pyproject.toml
yealink_manager/: __init__.py  main.py
